@@ -1,5 +1,11 @@
 2008-02-20  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totemPlugin.cpp: For the DivX
+	web player, force the viewer to open the file
+	itself, as it would allow it to seek
+
+2008-02-20  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/idl/totemIMullYPlayer.idl:
 	Implement from documentation
 	* browser-plugin/totemMullYPlugin.cpp:
